added mto, completed until mto services 1-2, fix layout design up till assessor service 4

--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -143,6 +143,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/blue_2"
                 android:text="About"
+                android:visibility="invisible"
                 android:textColor="@color/white"
                 app:icon="@mipmap/about_button"
                 app:iconTint="@color/white"
