--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -9,7 +9,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="25dp"
+        tools:layout_editor_absoluteY="148dp">
 
         <TextView
             android:id="@+id/office_name"
@@ -25,6 +27,69 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/buttonChangePassword"
+            style="@style/Widget.Material3.Button.ElevatedButton"
+            android:layout_width="256dp"
+            android:layout_height="wrap_content"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="Change Admin Password"
+            android:textAlignment="textStart"
+            android:textColor="#6F6F6F"
+            android:textSize="10sp"
+            app:cornerRadius="0dp"
+            app:icon="@mipmap/go_button"
+            app:iconGravity="end"
+            app:iconTint="#6F6F6F"
+            app:layout_constraintBottom_toTopOf="@+id/buttonResetPassword"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/buttonResetPassword"
+            style="@style/Widget.Material3.Button.ElevatedButton"
+            android:layout_width="256dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            android:insetTop="0dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="Reset to Master Password"
+            android:textAlignment="textStart"
+            android:textColor="#6F6F6F"
+            android:textSize="10sp"
+            app:cornerRadius="0dp"
+            app:icon="@mipmap/go_button"
+            app:iconGravity="end"
+            app:iconTint="#6F6F6F"
+            app:layout_constraintBottom_toTopOf="@+id/aboutLogo"
+            app:layout_constraintEnd_toEndOf="@+id/buttonChangePassword"
+            app:layout_constraintStart_toStartOf="@+id/buttonChangePassword" />
+
+        <ImageView
+            android:id="@+id/aboutLogo"
+            android:layout_width="wrap_content"
+            android:layout_height="32dp"
+            android:src="@mipmap/kitakitzlogo256"
+            app:layout_constraintBottom_toTopOf="@+id/versionTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/versionTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="Version:"
+            android:textColor="@color/blue_2"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
