--- a/app/src/main/res/layout/activity_post_screen.xml
+++ b/app/src/main/res/layout/activity_post_screen.xml
@@ -43,6 +43,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/postscreenlogo256" />
 
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#00FFFFFF" />
+
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
