--- a/app/src/main/res/layout/progress_dialog_layout.xml
+++ b/app/src/main/res/layout/progress_dialog_layout.xml
@@ -4,7 +4,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="20dp"
-    android:gravity="center">
+    android:gravity="center"
+    android:background="@android:color/transparent">
 
     <ProgressBar
         android:id="@+id/progressBar"
