--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -19,11 +19,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="150dp"
-            android:text="ABOUT"
+            android:text="Settings"
             android:textAlignment="center"
             android:textColor="#49454F"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -33,6 +32,7 @@
             style="@style/Widget.Material3.Button.ElevatedButton"
             android:layout_width="256dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
             android:insetTop="0dp"
             android:insetBottom="0dp"
             android:paddingLeft="8dp"
@@ -45,17 +45,17 @@
             app:icon="@mipmap/go_button"
             app:iconGravity="end"
             app:iconTint="#6F6F6F"
-            app:layout_constraintBottom_toTopOf="@+id/buttonResetPassword"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/office_name" />
 
         <Button
             android:id="@+id/buttonResetPassword"
             style="@style/Widget.Material3.Button.ElevatedButton"
             android:layout_width="256dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
             android:insetTop="0dp"
+            android:insetBottom="0dp"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
             android:text="Reset to Master Password"
@@ -66,18 +66,62 @@
             app:icon="@mipmap/go_button"
             app:iconGravity="end"
             app:iconTint="#6F6F6F"
-            app:layout_constraintBottom_toTopOf="@+id/aboutLogo"
             app:layout_constraintEnd_toEndOf="@+id/buttonChangePassword"
-            app:layout_constraintStart_toStartOf="@+id/buttonChangePassword" />
+            app:layout_constraintStart_toStartOf="@+id/buttonChangePassword"
+            app:layout_constraintTop_toBottomOf="@+id/buttonChangePassword" />
 
-        <ImageView
-            android:id="@+id/aboutLogo"
+        <Button
+            android:id="@+id/buttonCheckUpdate"
+            style="@style/Widget.Material3.Button.ElevatedButton"
+            android:layout_width="256dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="32dp"
+            android:insetTop="0dp"
+            android:insetBottom="0dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="Check For Update"
+            android:textAlignment="textStart"
+            android:textColor="#6F6F6F"
+            android:textSize="10sp"
+            app:cornerRadius="0dp"
+            app:icon="@mipmap/go_button"
+            app:iconGravity="end"
+            app:iconTint="#6F6F6F"
+            app:layout_constraintBottom_toTopOf="@+id/githubLink"
+            app:layout_constraintEnd_toEndOf="@+id/buttonResetPassword"
+            app:layout_constraintStart_toStartOf="@+id/buttonResetPassword" />
+
+        <!-- GitHub Profile Picture (optional) -->
+
+        <!-- GitHub Link TextView -->
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/githubProfilePicture"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginRight="8dp"
+            android:layout_centerHorizontal="true"
+            android:contentDescription="GitHub Profile Picture"
+            android:src="@android:drawable/ic_menu_report_image"
+            app:layout_constraintBottom_toBottomOf="@+id/githubLink"
+            app:layout_constraintEnd_toStartOf="@+id/githubLink"
+            app:layout_constraintTop_toTopOf="@+id/githubLink" />
+
+        <TextView
+            android:id="@+id/githubLink"
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:src="@mipmap/kitakitzlogo256"
+            android:layout_height="wrap_content"
+            android:text="GitHub"
+            android:textSize="10sp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="8dp"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:clickable="true"
+            android:focusable="true"
             app:layout_constraintBottom_toTopOf="@+id/versionTextView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
             android:id="@+id/versionTextView"
