--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -109,7 +109,7 @@
             <!-- Back Button -->
             <Button
                 android:id="@+id/buttonBack"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/blue_2"
                 android:icon="@mipmap/back_button"
@@ -124,7 +124,7 @@
             <!-- Home Button -->
             <Button
                 android:id="@+id/buttonHome"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/blue_2"
                 android:text="Home"
@@ -139,13 +139,13 @@
             <!-- About Button -->
             <Button
                 android:id="@+id/buttonAbout"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/blue_2"
                 android:text="About"
                 android:visibility="invisible"
                 android:textColor="@color/white"
-                app:icon="@mipmap/about_button"
+                app:icon="@drawable/settings_button"
                 app:iconTint="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
