--- a/app/src/main/res/layout/activity_post_screen.xml
+++ b/app/src/main/res/layout/activity_post_screen.xml
@@ -12,6 +12,8 @@
         android:id="@+id/animationView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/animation" />
@@ -27,6 +29,18 @@
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/animation" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/christmasTreeView"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent=".3"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/christmas_tree" />
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -47,7 +61,8 @@
         android:id="@+id/imageButton2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#00FFFFFF" />
+        android:background="#00FFFFFF"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/title"
@@ -96,7 +111,7 @@
 
         android:shadowDx="1.5"
         android:shadowDy="1.3"
-        android:text="Press the Seal to start"
+        android:text="Press to start"
         android:textAllCaps="true"
         android:textColor="@color/blue_2"
         android:textSize="14sp"
