--- a/app/src/main/res/layout/office_human_resource_management_office.xml
+++ b/app/src/main/res/layout/office_human_resource_management_office.xml
@@ -174,6 +174,7 @@
 
       <!-- Non-scrollable content here -->
       <ImageView
+          android:id="@+id/imageLayout"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_marginTop="20dp"
