--- a/app/src/main/res/layout/office_municipal_accounting_office.xml
+++ b/app/src/main/res/layout/office_municipal_accounting_office.xml
@@ -186,17 +186,16 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <!-- Non-scrollable content here -->
-            <ImageView
-                android:id="@+id/imageLayout"
+            <VideoView
+                android:id="@+id/videoView"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginBottom="20dp"
                 android:layout_weight="1"
-                android:paddingLeft="20dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/floorplan" />
+                android:layout_gravity="center_vertical|center_horizontal"/>
 
         </LinearLayout>
 
