Added floor plan of HR, MPDO, Budget, Engineering, Mayor's, PESO, and POPDEV offices

--- a/app/src/main/res/layout/office_mpdo.xml
+++ b/app/src/main/res/layout/office_mpdo.xml
@@ -175,23 +175,22 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/scrollableLeft"
             app:layout_constraintTop_toTopOf="parent">
 
             <!-- Non-scrollable content here -->
-            <ImageView
-                android:id="@+id/imageLayout"
+            <VideoView
+                android:id="@+id/videoView"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginBottom="20dp"
-                android:layout_weight="1"
-                android:paddingLeft="20dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/floorplan" />
+                android:layout_weight="1"/>
 
         </LinearLayout>
 
