--- a/app/src/main/res/layout/office_mpdo.xml
+++ b/app/src/main/res/layout/office_mpdo.xml
@@ -181,6 +181,15 @@
             app:layout_constraintStart_toEndOf="@id/scrollableLeft"
             app:layout_constraintTop_toTopOf="parent">
 
+            <TextView
+                android:id="@+id/floorID"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:gravity="center"/>
+
             <!-- Non-scrollable content here -->
             <VideoView
                 android:id="@+id/videoView"
