added bonuspack for osmdroid

--- a/app/src/main/res/layout/office_tourism.xml
+++ b/app/src/main/res/layout/office_tourism.xml
@@ -114,6 +114,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/scrollableLeft"
@@ -126,22 +127,20 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:gravity="center"/>
+                android:gravity="center" />
 
-            <!-- Non-scrollable content here -->
-            <ImageView
-                android:id="@+id/imageLayout"
+            <!-- Replace VideoView with MapView -->
+            <org.osmdroid.views.MapView
+                android:id="@+id/mapView"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="match_parent"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginBottom="20dp"
-                android:layout_weight="1"
-                android:paddingLeft="20dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/floorplan" />
-
+                android:layout_weight="1" />
         </LinearLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
