--- a/app/src/main/res/layout/office_municipal_general_service_office.xml
+++ b/app/src/main/res/layout/office_municipal_general_service_office.xml
@@ -247,19 +247,34 @@
                 android:layout_marginRight="20dp"
                 android:gravity="center"/>
 
-            <!-- Non-scrollable content here -->
-            <ImageView
-                android:id="@+id/imageLayout"
+            <!-- CardView wrapping the MapView for rounded corners -->
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginBottom="20dp"
-                android:layout_weight="1"
-                android:paddingLeft="20dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/floorplan" />
+                app:cardCornerRadius="16dp"
+                app:cardElevation="4dp"
+                android:layout_weight="1">
 
+                <org.osmdroid.views.MapView
+                    android:id="@+id/mapView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+                <!-- Overlay Image at Bottom-Right -->
+                <ImageView
+                    android:id="@+id/overlayImage"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/tourism256"
+                    android:layout_gravity="bottom|end"
+                    android:padding="10dp"
+                    android:clickable="true"
+                    android:focusable="true"/>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
