Added all maps location of offices outside the municipal hall

--- a/app/src/main/res/layout/bonuspack_bubble.xml
+++ b/app/src/main/res/layout/bonuspack_bubble.xml
@@ -1,5 +1,6 @@
 <!-- Example layout for the info window -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/infoWindowLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -13,5 +14,6 @@
         android:text="Title"
         android:textStyle="bold"
         android:textColor="#000000"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:gravity="center"/>
 </LinearLayout>
