--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="semi_transparent_black">#88474747</color>
     <color name="christmasGreen">#06402B</color>
     <color name="christmasGreenLight">#0d865a</color>
+    <color name="red">#ff0000</color>
+    <color name="gray">#808080</color>
 </resources>
