--- a/app/src/main/res/layout/activity_post_screen.xml
+++ b/app/src/main/res/layout/activity_post_screen.xml
@@ -30,6 +30,12 @@
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/animation" />
 
+    <VideoView
+        android:id="@+id/postScreenVideo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"/>
+
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="192dp"
