--- a/app/src/main/res/drawable/custom_progress_drawable.xml
+++ b/app/src/main/res/drawable/custom_progress_drawable.xml
@@ -1,4 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@android:id/background">
+        <shape>
+            <corners android:radius="8dp" />
+            <solid android:color="#FFFFFF" />
+        </shape>
+    </item>
+    <item android:id="@android:id/progress">
+        <clip>
+            <shape>
+                <corners android:radius="8dp" />
+                <gradient
+                    android:startColor="#673AB7"
+                    android:endColor="#8970B6"
+                    android:angle="0" />
+            </shape>
+        </clip>
+    </item>
+</layer-list>
