Added valentines effect on postscreen and header for feb 1-14

--- a/app/src/main/res/layout/activity_post_screen_valentines.xml
+++ b/app/src/main/res/layout/activity_post_screen_valentines.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/fake_white"
+    android:background="@drawable/valentines"
     tools:context=".postScreen">
 
     <com.airbnb.lottie.LottieAnimationView
@@ -16,7 +16,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/animation" />
+        app:lottie_rawRes="@raw/animation"
+        android:visibility="gone"/>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animationView3"
@@ -28,7 +29,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/animation" />
+        app:lottie_rawRes="@raw/animation"
+        android:visibility="gone"/>
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/christmasTreeView"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="bottom"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent=".3"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/christmas_tree" />
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -64,7 +78,7 @@
         android:text="Local Government of Kitaotao"
 
         android:textAllCaps="true"
-        android:textColor="@color/blue_2"
+        android:textColor="@color/fake_white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageButton"
@@ -82,7 +96,7 @@
         android:text="KIOSK"
 
         android:textAllCaps="true"
-        android:textColor="@color/blue_2"
+        android:textColor="@color/fake_white"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/title"
@@ -101,7 +115,7 @@
         android:shadowDy="1.3"
         android:text="Press to start"
         android:textAllCaps="true"
-        android:textColor="@color/blue_2"
+        android:textColor="#F3536A"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -115,7 +129,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="Version:"
-        android:textColor="@color/blue_2"
+        android:textColor="#F3536A"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
