--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="size_256dp">256dp</dimen>
+    <dimen name="size_192dp">192dp</dimen>
+    <dimen name="size_300dp">300dp</dimen>
 </resources>
