--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="size_256dp">256dp</dimen>
     <dimen name="size_192dp">192dp</dimen>
     <dimen name="size_300dp">300dp</dimen>
+    <dimen name="popup_menu_width">256dp</dimen>
 </resources>
