--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,5 @@
     <color name="christmasGreenLight">#0d865a</color>
     <color name="red">#ff0000</color>
     <color name="gray">#808080</color>
-    <color name="valentines">#A10802</color>
+    <color name="valentines">#972425</color>
 </resources>
